--- a/package.json
+++ b/package.json
@@ -37,17 +37,21 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@tanstack/react-virtual": "^3.13.12",
     "@vercel/analytics": "latest",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
+    "csv-parse": "^5.5.6",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "idb": "^8.0.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "16.0.3",
     "next-themes": "^0.4.6",
+    "openai": "^4.67.0",
     "react": "19.2.0",
     "react-day-picker": "9.8.0",
     "react-dom": "19.2.0",
