Updated CSV processing for new users. Now stores with the app

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-# OpenAI API Key
+# OpenAI API Key (Server-Side Only - NOT exposed to browser)
 # Get your API key from: https://platform.openai.com/api-keys
 # Required for semantic search and AI features
-NEXT_PUBLIC_OPENAI_API_KEY=your_openai_api_key_here
+# IMPORTANT: Do NOT use NEXT_PUBLIC_ prefix - keeps key secure on server
+OPENAI_API_KEY=your_openai_api_key_here
